--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 	overflow: hidden;
 	margin-top: 30px;
 	background-color: gray;
-	box-shadow: inset 0 0 1em blue, 0 0 1em blue;
+	box-shadow: inset 0 0 1em black, 0 0 1em black;
 
 }
 
@@ -24,7 +24,6 @@ p {
 
 #logos {
 	float: left;
-	margin-left: 30px;
 	padding: 10px;
 
 }
@@ -35,4 +34,13 @@ p {
 
 #git {
 	text-decoration: none;
+}
+
+.nav {
+	float: left;
+	background-color: #55acee;
+}
+
+.container {
+	
 }
