--- a/style.css
+++ b/style.css
@@ -1,28 +1,24 @@
-.slider {
-	margin-left: auto;
-	margin-right: auto;
-	width: 940px;
-	height: 520px;
+.slider img {
+	width: 850px;
+	height: 500px;
 	overflow: hidden;
-	margin-top: 30px;
+	margin: 0 auto;
 	background-color: gray;
 	box-shadow: inset 0 0 1em black, 0 0 1em black;
+	position: absolute;
+}
 
+li {
+	list-style: none;
 }
 
 button {
 	padding: 5px;
 }
-li {
-	list-style: none;
-}
 
-.slider img {
-	width: 940px;
-	height: 520px;	
-	display: none;
-}
+
 
 p {
 	text-align: center;
+	float: bottom;
 }
