--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .slider {
-	width: 850px;
+	width: 950px;
 	height: 500px;
 	overflow: hidden;
 	margin: 0 auto;
@@ -9,9 +9,8 @@
 }
 
 .slider img {
-	width: 850px;
-	height: 500px;
-	right: 20px; /* why do I need to do this?, Not sure how to match image to parents width/height */
+	width: 100%;
+	height: auto;
 	position: absolute;
 }
 
