--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
 	width: 100%;
 	height: auto;
 	position: absolute;
+	display: none;
 }
 
 .slider {
@@ -20,6 +21,19 @@
 
 button {
 	padding: 5px;
+	position: relative;
+}
+
+.rightBtn {
+	text-align: right;
+	margin-right: 200px;
+}
+
+.leftBtn {
+	text-align: left;
+	margin-left: 200px;
+	bottom: 10px;
+
 }
 
 p {
